cilium-cli/connectivity/builder/manifests/client-egress-to-echo-expression-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-egress-to-echo-expression
spec:
  podSelector:
    matchExpressions:
      - { key: 'other', operator: Exists }
  policyTypes:
    - Egress # Be explicit otherwise by default Ingress is denied.
  egress:
    - to:
        - podSelector:
            matchLabels:
              kind: echo
            matchExpressions:
              - { key: io.cilium.k8s.policy.cluster, operator: Exists }
      ports:
        - protocol: TCP
          port: 8080
